# project-forge

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_templates.py
.github/workflows/: tests.yml
src/project_forge/cli/: __init__.py  main.py
src/project_forge/cli/commands/: check.py  format.py  new.py  test.py  upgrade.py
src/project_forge/core/: project.py
src/project_forge/core/archive/: forge (2).py  forge.py
src/project_forge/templates/: customization.py  hooks.py  structure.yaml  variants.yml
src/project_forge/templates/python/base/: .gitignore.j2  .pre-commit-config.yaml.j2  README.j2  README.md.j2  pyproject.toml.j2
src/project_forge/templates/python/base/.github/workflows/: tests.yml.j2
src/project_forge/templates/python/cli/: .gitignore.j2  README.md.j2  mkdocs.yml.j2  pyproject.toml.j2
src/project_forge/templates/python/cli/src/cli/: __init__.py.j2  main.py.j2
src/project_forge/utils/: config.py  console.py  constants.py  docs.py  template_manager.py  upgrade.py  validation.py
tests/: conftest.py  test_config.py
